@startuml
title Scripture Memorizer - Design Diagram

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

class Program {
  +Main() : void
  +Run() : void
}

class Scripture {
  -_reference : Reference
  -_words : List<Word>
  +Scripture(reference : Reference, text : string)
  +GetDisplayText() : string
  +HideRandomWords(numberToHide : int) : void
  +IsCompletelyHidden() : bool
}

class Reference {
  -_book : string
  -_chapter : int
  -_startVerse : int
  -_endVerse : int
  +Reference(book : string, chapter : int, verse : int)
  +Reference(book : string, chapter : int, startVerse : int, endVerse : int)
  +GetDisplayText() : string
}

class Word {
  -_text : string
  -_isHidden : bool
  +Word(text : string)
  +Hide() : void
  +IsHidden() : bool
  +GetDisplayText() : string
}

Program --> Scripture : uses
Scripture *-- Reference : has a
Scripture *-- "many" Word : contains

note right of Scripture
Stores the full scripture as
individual Word objects so
random words can be hidden.
end note

legend right
Program Flow

1. Program creates a Reference object.
2. Program creates a Scripture object using the reference and verse text.
3. Program displays Scripture.GetDisplayText().
4. User presses Enter to continue or types quit to stop.
5. If Enter is pressed, Scripture.HideRandomWords(3) is called.
6. Program checks Scripture.IsCompletelyHidden().
7. The loop repeats until all words are hidden or the user quits.
endlegend

@enduml
